Fix images being split over page breaks in Firefox
Seems to be an ongoing bug, I'm going to use a different approach to
centre images.

--- a/static/blog-article.css
+++ b/static/blog-article.css
@@ -26,8 +26,11 @@
 }
 
 .blog-article img {
-  display: block;
-  margin: 8px auto;
+  position: relative;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  break-inside: avoid;
   min-width: 240px;
   max-width: 70%;
   transition: max-width 0.3s;
